--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"extends": "stylelint-config-xo"
 	},
 	"dependencies": {
+		"@slack/web-api": "^6.1.0",
 		"webext-options-sync": "^2.0.1",
 		"webextension-polyfill": "^0.7.0"
 	},
